<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="55dp"
            android:layout_marginTop="55dp"
            android:fontFamily="@font/outfit_medium"
            android:gravity="center"
            android:text="@string/access_by_phone"
            android:textColor="#0F2851"
            android:textSize="30sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/enter_the_phone"
            android:textColor="#898D9E" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="25dp"
            android:background="@drawable/shape_edittext"
            android:drawableStart="@drawable/phone_Icom"
            android:paddingStart="13dp"
            android:paddingEnd="5dp"
            android:text="+998"
            android:textColor="#898D9E" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/we_ll_send_you_a_code_it_help_us_keep_your_n_account_secure"
            android:textColor="#8885AC"
            android:textSize="14sp" />




    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/shadow_btn_one" />

            <ImageView
                android:id="@+id/BtnContinue"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/shape_btn_one"
                android:src="@drawable/text_login" />

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:src="@drawable/or" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/stroce_btn"
                android:padding="15dp"
                android:src="@drawable/google" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/stroce_btn"
                android:padding="15dp"
                android:src="@drawable/call" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2.5dp"
                android:fontFamily="@font/outfit_medium"
                android:text="@string/already_have_an_account"
                android:textColor="#0F2851"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2.5dp"
                android:fontFamily="@font/outfit_medium"
                android:text="@string/login"
                android:textColor="#585CE5"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>